Implemented TTL Compatibility checker logic